# crowe-logic-foundry

./: .dockerignore  .env.example  .env.railway.example  .env.railway.out.test  .gitignore  .npmignore  .railwayignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.control-plane  Dockerfile.studio  LICENSE  Makefile  README.md  STUDIO_CHANGELOG.md  STUDIO_ROADMAP.md  fly.studio.toml  fly.toml  package.json  pyproject.toml  railway.json  render.yaml  requirements-control-plane.txt  requirements-studio.txt  requirements.txt  setup.py  test_ui.py
.github/: copilot-instructions.md
.pi/: AGENTS.md  settings.json
agents/: code.yaml  crowe-talon.yaml  cultivation.yaml  music.yaml  quantum.yaml  research.yaml  studio.yaml  substrate.yaml  youtube-engagement.yaml
bench/: README.md  config.py  generate_mycology_set.py  headless_client.py  report.py  runner.py  scoring.py
cli/: agents_deps.py  auth.py  autonomy.py  branding.py  cluster_cli.py  cluster_dispatch.py  cost_model.py  crowe_logic.py  discover.py  doctor.py  dual_mode.py  dual_renderer.py  ensemble.py  first_run.py  foundry_api.py  gateway_client.py  guardrail_pipeline.py  headless.py  history.py  kb.py  mark_art.py  openai_bridge.py  ops_cli.py  parallel_dispatcher.py  paste.py  portfolio.py  queue_renderer.py  renderer.py  session_runtime.py  spinners.py  synapse_cli.py  tool_args.py  tool_cache.py
config/: agent_config.py  customer_pricing.json  health.py  model_sync.py  models.extra.example.json  models.extra.json  models.extra.json.bak-pre-watsonx-strip  prompt_loader.py  quality.py  router.py  studio_cameras.yaml  studio_tenants.yaml  studio_training.yaml  synapse_fallback.py  telemetry.py  upstream_costs.json  x402_pricing.json
control_plane/: __init__.py  agent_gateway.py  agent_wallets.py  agents.py  anonymous.py  billing.py  chat_history.py  cmp_translate.py  db.py  gateway.py  kb_search.py  main.py  mesh.py  mesh_bus.py  oidc.py  plans.py  preview.py  settlement.py  streaming.py  tokens.py  updates.py  web.py  x402.py
crowe_synapse/: __init__.py  agent_registry.py  memory.py  orchestrator.py  quantum_bridge.py
crowe_synapse_engine/: __init__.py  agent_registry.py  internal_deployment.py  internal_development.py  memory.py  orchestrator.py  pipeline.py  quantum_bridge.py
dashboard/: __init__.py
demo/: commands.txt  tour.md
docs/: 2026-05-24-credit-applications-FINAL.md  2026-05-24-credit-funded-architecture-strategy.md  2026-05-24-grant-targets.md  2026-05-24-startup-credit-applications-kit.md  AICL_SPEC.md  ARCHITECTURE.md  OPS_API.md  OPS_SCHEMA.md  TESTER_ONBOARDING.md  agentic-architecture-2026-04-28.md  blueprint.md  cloudflare-ai-gateway-frontier-plan.md  crowe-terminal-monetization.md  developer-report-2026-05-21.md  developer-report.md  factory-ai-evolution.md  launch-plan.md  nemoclaw-integration.md  platform-state-2026-05-18.md  pricing-strategy.md  product-readiness.md  revenue-projection.md  roadmap.md  studio-mobile-plan.md
domain/: __init__.py
eval/: __init__.py  replay.py  rubric.py
iterm/: __init__.py  daemon.py
knowledge/: __init__.py  search.py
knowledge_lake/: __init__.py  discover.py  embeddings.py  ingest.py  search.py  sources.py  store.py
landing/: README.md  index.html  manifest.webmanifest  nixpacks.toml  railway.json  robots.txt  sitemap.xml  success.html
launchable/: README.md  bootstrap.sh  brev.yaml
migrations/: 001_initial.sql  002_control_plane.sql  003_knowledge_plane.sql  004_pricing.sql  005_credits.sql  006_checkout_provisions.sql  007_launch_plan_cutover.down.sql  007_launch_plan_cutover.sql  008_drop_vs_code_copy.down.sql  008_drop_vs_code_copy.sql  009_agent_wallets.sql  009_chat_sessions.down.sql  009_chat_sessions.sql  009_ops_layer.sql  010_anon_devices.down.sql  010_anon_devices.sql  011_free_usage.down.sql  011_free_usage.sql
npm/: bin.js  index.js
providers/: __init__.py  _shared.py  _ttft_watchdog.py  anthropic.py  azure_openai.py  azure_sora.py  deepparallel.py  hosted_openai.py  nvidia.py  ollama.py  openrouter.py  runtime_factory.py  watsonx.py
scripts/: await-anthropic-subscribe.sh  bootstrap_admin.py  control_plane_entrypoint.sh  create_agent.py  curate_crowelm_v3_local.py  deploy-azure-frontier.sh  deploy_glm51.py  e2e.py  eval_prompt_density.py  fine_tune.py  generate_models_extra.py  issue_tester_key.py  lora_curate_transcripts.py  lora_eval_gate.py  lora_phase1_upload_to_cos.py  lora_phase1_verify_local.py  lora_phase2_azure_pipeline.py  lora_phase2_submit_tuning.py  lora_phase3_wire_inference.py  mcp_crowe_logic_ai.py  mcp_pyproject.toml  mcp_quantum_music.py  nemoclaw_recon.sh  npm-publish.sh  orchestrator.applescript  pi-build.mjs  run_migrations.py  smoke_v4_cloud_swap.py  spinner_preview.py  stripe_bootstrap.py  stripe_bootstrap.sh  studio-smoke-test.py  studio_launch.py  test_agent.py  tester_e2e.sh  verify-rebrand.sh  vs_populate_crowe_knowledge.py  vs_test_retrieval.py  weekly-readiness.sh  wire_cloudflare_models.py
tests/: test_agent_gateway.py  test_agent_identity.py  test_agent_registry.py  test_agent_runner.py  test_agent_wallets.py  test_aicl.py  test_anon_tokens.py  test_anonymous_gateway.py  test_anthropic.py  test_architecture_boundaries.py  test_audit_log.py  test_auto_ensemble.py  test_auto_route_enabled.py  test_autonomy.py  test_autonomy_schema.py  test_autonomy_wiring.py  test_azure_agent_selfheal.py  test_azure_openai.py  test_azure_sora.py  test_azure_surface_selection.py  test_bench_config.py  test_bench_datasets.py  test_bench_headless_client.py  test_bench_report.py  test_bench_runner.py  test_bench_runner_cli.py  test_bench_scoring_a.py  test_bench_scoring_b.py  test_bench_scoring_code.py  test_billing_webhook.py  test_chat_history.py  test_cli_auth.py  test_cli_deploy.py  test_cli_model_switch.py  test_cli_models_sync.py  test_cli_transcript_rendering.py  test_cluster_cli.py  test_cluster_dispatch.py  test_cmp_translate.py  test_control_plane.py  (+110 more)
tools/: __init__.py  agent_runner.py  applescript.py  audit_log.py  azure_agent.py  browser.py  capture.py  chatgpt_agent.py  crowelm.py  (+35 more)
(+518 files in other folders)
