[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowe-logic"
version = "0.2.5"
description = "Crowe Logic. Universal AI Agent powered by CroweLM on Azure AI Foundry."
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
authors = [
    {name = "Michael Crowe", email = "michael@crowelogic.com"},
]
maintainers = [
    {name = "Michael Crowe", email = "michael@crowelogic.com"},
]
keywords = ["ai", "agent", "azure", "llm", "biotech", "quantum", "tool-calling", "mycology", "mushroom"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "azure-ai-agents>=1.1.0",
    "azure-identity>=1.25.0",
    "azure-ai-projects>=2.0.0",
    "anthropic>=0.40.0",
    "opentelemetry-sdk>=1.40.0",
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "click>=8.1.0",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "wcwidth>=0.2.13",
]

[project.optional-dependencies]
quantum = [
    "crowe-quantum-trinity>=2.0.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.15.0",
    "qiskit-ibm-runtime>=0.35.0",
    "cirq>=1.4.0",
    "pennylane>=0.39.0",
]
nvidia = [
    "nvidia-cuda-runtime-cu12",
    "cupy-cuda12x",
]
all = [
    "crowe-logic[quantum,nvidia]",
]

[project.urls]
Homepage = "https://crowelogic.com"
Repository = "https://github.com/MichaelCrowe11/crowe-logic-foundry"

[project.scripts]
crowe-logic = "cli.crowe_logic:main"
crowe-logic-quantum-mcp = "scripts.mcp_quantum_music:main"

[tool.setuptools.packages.find]
include = ["cli*", "tools*", "config*", "scripts*", "providers*", "crowe_synapse_engine*", "iterm*"]

[tool.setuptools.package-data]
cli = ["icon.png", "icons/*.icns"]
crowe_synapse_engine = ["templates/*.yaml"]
iterm = ["daemon.py"]
