[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crowe-logic"
version = "0.3.0"
description = "Crowe Logic. Universal AI Agent powered by CroweLM on Azure AI Foundry."
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.10"
authors = [
    {name = "Michael Crowe", email = "michael@crowelogic.com"},
]
maintainers = [
    {name = "Michael Crowe", email = "michael@crowelogic.com"},
]
keywords = ["ai", "agent", "azure", "llm", "biotech", "quantum", "tool-calling", "mycology", "mushroom"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "azure-ai-agents>=1.1.0",
    "azure-identity>=1.25.0",
    "azure-ai-projects>=2.0.0",
    "anthropic>=0.40.0",
    "opentelemetry-sdk>=1.40.0",
    "azure-core-tracing-opentelemetry>=1.0.0b12",
    "click>=8.1.0",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "wcwidth>=0.2.13",
]

[project.optional-dependencies]
quantum = [
    "crowe-quantum-trinity>=2.0.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.15.0",
    "qiskit-ibm-runtime>=0.35.0",
    "cirq>=1.4.0",
    "pennylane>=0.39.0",
]
nvidia = [
    "nvidia-cuda-runtime-cu12",
    "cupy-cuda12x",
]
studio-vision = [
    "torch>=2.2",
    "transformers>=4.44",
    "Pillow>=10.0",
    "scikit-learn>=1.4",
    "joblib>=1.3",
]
all = [
    "crowe-logic[quantum,nvidia,studio-vision]",
]

[project.urls]
Homepage = "https://crowelogic.com"
Repository = "https://github.com/MichaelCrowe11/crowe-logic-foundry"

[project.scripts]
crowe-logic = "cli.crowe_logic:main"
crowe-logic-quantum-mcp = "scripts.mcp_quantum_music:main"

[tool.setuptools.packages.find]
include = ["cli*", "tools*", "config*", "scripts*", "providers*", "crowe_synapse_engine*", "iterm*"]

[tool.setuptools.package-data]
cli = ["icon.png", "icons/*.icns"]
crowe_synapse_engine = ["templates/*.yaml"]
iterm = ["daemon.py"]

# ── Ruff configuration ────────────────────────────────────────────
# Keeps pyflakes (F-codes) strict because they catch real bugs.
# Relaxes the pycodestyle (E-codes) noise that the codebase has
# carried since the initial commit and that the CI workflow surfaced
# when it was added in PR #33. Specific suppressions:
#
# - E402 (imports not at top): the foundry has a deliberate pattern of
#   lazy + conditional imports inside functions for slow/optional deps
#   (numpy, openai, azure SDKs).
# - E741 (ambiguous names l/I/O): legacy code uses `l` for loop vars.
# - E721 (type == vs isinstance): a handful of places compare exact
#   types deliberately.
# - E701, E731: tolerated stylistic choices.
#
# Per-file ignores:
# - `__init__.py`: re-exports legitimately import-without-use (F401)
#   and use star-imports (F403).
# - `tests/*`: test fixtures legitimately import without referencing,
#   and unused-local patterns appear in setup/teardown helpers.
[tool.ruff.lint]
# F841 (unused locals): tolerated because several call sites keep
# `t0 = time.time()` / `cams_by_name = {...}` as reserved-for-debug
# scaffolding. Auto-fixing would silently strip readable intent.
ignore = ["E402", "E701", "E721", "E731", "E741", "F841"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F841"]
